# EchoTrans

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: EchoTransDependencies.cmake
docs/superpowers/plans/: 2026-06-05-project-foundation-plan.md
docs/superpowers/specs/: 2026-06-05-ai-simultaneous-translation-design.md
src/app/: main.cpp
src/core/: DependencyReport.cpp  DependencyReport.h
src/live/: LiveSubtitleInterpreter.cpp  LiveSubtitleInterpreter.h
src/media/: FFmpegMediaProbe.cpp  FFmpegMediaProbe.h  MediaInfo.h
src/player/: BlockingQueue.h  MediaPlayerCore.cpp  MediaPlayerCore.h  PlaybackQueues.h  PlaybackState.h  TranscriptionAudioFrame.h  VideoFrameSynchronizer.h
src/subtitle/: SubtitleTrack.cpp  SubtitleTrack.h
src/transcription/: MediaSubtitlePreparer.cpp  MediaSubtitlePreparer.h  TranscriptionAudioPreprocessor.cpp  TranscriptionAudioPreprocessor.h  WhisperTranscriber.cpp  WhisperTranscriber.h
src/translation/: BaiduTranslator.cpp  BaiduTranslator.h
src/ui/: MainWindow.cpp  MainWindow.h
tests/core/: DependencyReportTests.cpp
tests/live/: LiveSubtitleInterpreterTests.cpp
tests/media/: FFmpegMediaProbeTests.cpp
tests/player/: BlockingQueueTests.cpp  MediaPlayerCoreTests.cpp  VideoFrameSynchronizerTests.cpp
tests/subtitle/: SubtitleTrackTests.cpp
tests/transcription/: MediaSubtitlePreparerTests.cpp  TranscriptionAudioPreprocessorTests.cpp  WhisperTranscriberTests.cpp
tests/translation/: BaiduTranslatorTests.cpp
tests/ui/: MainWindowTests.cpp
